# untangle

./: .flake8  .gitignore  .landscape.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG.md  LICENSE  Makefile  README.md  examples.py  index.html  params.json  pyproject.toml  setup.cfg  setup.py  shippable.yml  tests.py  tox.ini  untangle.py  untangle.rst
.github/: FUNDING.yml
.github/workflows/: build.yml  codeql.yml  release.yml
docs/: Makefile  conf.py  index.rst
src/untangle/: __init__.py
tests/: test_untangle.py  tests.py
tests/res/: aws.xml  figs.xml  foo.xml  pom.xml  some.xslt  unicode.xml  xxe.xml
untangle/: __init__.py  core.py  exceptions.py
