[tool.poetry]
name = "untangle"
version = "1.1.1"
description = "Converts XML to Python objects"
authors = ["Christian Stefanescu <hello@stchris.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
