[project]
authors = [{ name = "Christian Stefanescu" }]
name = "untangle"
version = "1.2.1"
description = "Converts XML to Python objects"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["defusedxml==0.7.1"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

